--- a/hisp.cabal
+++ b/hisp.cabal
@@ -14,7 +14,7 @@ extra-source-files:    Makefile, uuagc_options, AG/Hisp.ag,
 executable main
   main-is:             Main.hs
   build-depends:       base, mtl, parsec, lens, transformers, containers,
-                       pretty, template-haskell
+                       pretty, template-haskell, monadplus
   hs-source-dirs:      .
   other-modules:       AG.Hisp, AG.SKI, AG.CodeGeneration, AG.Visualisation,
                        AG.ToCpp, AG.Cpp, AG.PrintCpp
