--- a/hisp.cabal
+++ b/hisp.cabal
@@ -5,7 +5,7 @@ license:               PublicDomain
 author:                Anton Golov
 stability:             what, where?
 tested-with:           GHC == 7.6.2
-build-type:            Custom
+build-type:            Simple
 cabal-version:         >= 1.8
 extra-source-files:    Makefile
 
