Bunch of minor cleanup, getting used to the code.

--- a/runtime/SConscript
+++ b/runtime/SConscript
@@ -1,8 +1,8 @@
 Import('env')
-Import('prefix')
+
+prefix = env['prefix']
 
 hisp_sources = Glob("*.cpp")
-
 target = "".join(['#lib/', prefix, 'hisp'])
 
 env.StaticLibrary(target, hisp_sources)
