Changed build type to Program.
Also tried to improve conformance to C++ idioms and added checks against
accidental copying of Spaces and Objects.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-*.hi
-*.o
-.*.swp
+bin/
+.dbgbuild
 dist
-main
-*.pdf
+*.hi
 lib/
 .local
+main
+*.o
+*.pdf
 .relbuild
-.dbgbuild
 .sconsign.dblite
-compile.sh
-c_compile.sh
-asm_test
+.*.swp
