--- a/runtime/SConscript
+++ b/runtime/SConscript
@@ -3,6 +3,6 @@ Import('env')
 prefix = env['prefix']
 
 hisp_sources = Glob("*.cpp")
-target = "".join(['#lib/', prefix, 'hisp'])
+target = "".join(['#bin/', prefix, 'hisp'])
 
-env.StaticLibrary(target, hisp_sources)
+env.Program(target, hisp_sources)
