--- a/runtime/SConscript
+++ b/runtime/SConscript
@@ -1,8 +1,9 @@
 Import('env')
 
 prefix = env['prefix']
+env.Append(CPPPATH = ['#runtime/'])
 
-hisp_sources = Glob("*.cpp")
+hisp_sources = Glob("*.cpp") + Glob("*/*.cpp")
 target = "".join(['#bin/', prefix, 'hisp'])
 
 env.Program(target, hisp_sources)
