Type inference now does something.
The output isn't readable enough to judge whether it works, and it doesn't
store the inferred information internally yet.

--- a/hisp.cabal
+++ b/hisp.cabal
@@ -12,7 +12,7 @@ extra-source-files:    Makefile
 executable main
   main-is:             Main.hs
   build-depends:       base, containers, prelude-extras, bound, wl-pprint,
-                       bytestring, void, peggy, mtl
+                       bytestring, void, peggy, mtl, transformers
   hs-source-dirs:      .
   extensions:          FlexibleInstances, StandaloneDeriving, FlexibleContexts,
                        NoMonomorphismRestriction, DeriveFunctor, DeriveFoldable,
